package uqam.inf5153.game.joueur;

import uqam.inf5153.game.objectif.Objectif;

import java.util.List;

public class Joueur {

    private PlateauDeJoueur plateauDeJoueur;
    private List<Objectif> objectifs;
    private int nombreActions = 2;
}
