package uqam.inf5153.game.objectif;

public abstract class Objectif {

    protected int points;

    public Objectif(int points){
        this.points = points;
    }
}
