package uqam.inf5153.game.objectif;

public class ObjectifParcelle extends Objectif {

    public ObjectifParcelle(int points){
        super(points);
    }
}
