package uqam.inf5153.game.parcelle;

import uqam.inf5153.game.Coordonnees;

public class BambouJaune extends Bambou {

    public BambouJaune(Coordonnees coordonnees) {
        super(coordonnees);
    }
}
