package uqam.inf5153.game.parcelle;

import uqam.inf5153.game.Coordonnees;

public class BambouRose extends Bambou{
    public BambouRose(Coordonnees coordonnees) {
        super(coordonnees);
    }
}
