@startuml
!include _common.style

title Takenoko (Structure)
center footer project #2 - class diagram

package uqam.inf5153.game{

  package joueur{
    class Joueur{
      - score: int
      - nbrActions: int
    }
    class PlateauDuJoueur{

    }
    Joueur *--> PlateauDuJoueur
    Joueur *--> Objectif
  }

  package parcelle{
    abstract class Parcelle{

    }
    class ParcelleVerte{

    }
    class ParcelleJaune{

    }
    class ParcelleRose{

    }
    class ParcelleEtang{

    }
    abstract class Bambou {

    }

    class BambouVert{

    }

    class BambouRose {

    }

    class BambouJaune {

    }

    ParcelleVerte --|> Parcelle
    ParcelleJaune --|> Parcelle
    ParcelleRose --|> Parcelle
    ParcelleEtang --|> Parcelle
    Parcelle *--> "1-4"Bambou
    Parcelle *--> Coordonnees
    BambouJaune --|> Bambou
    BambouVert --|> Bambou
    BambouRose --|> Bambou

  }

  package objectif{
    abstract class Objectif{
      points : int
    }
    class ObjectifParcelle{

    }
    ObjectifParcelle --|> Objectif
  }

  package plateau{
    class Coordonnees{

    }

    class Irrigation{

    }

    class PlateauDeJeu {

    }

    class ReseauIrrigation {
    + this(irrDebut: Irrigation)
    ----
    + ajouterIrrigationAuReseau(irr: Irrigation): boolean
    }

    PlateauDeJeu *--> "n" ReseauIrrigation
    ReseauIrrigation *--> "n" Irrigation
  }

}

@enduml